--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>This is an example</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1 style="color:aqua; font-family: 'Courier New', Courier, monospace;">Hello World!</h1>
     <p>2343232432432432324234324234</p>
     <textarea placeholder="Feedback?"></textarea>
     <br>
