--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This is an example</title>
+  <meta charset="UTF-8">
+  <title>Increment Counter</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 style="color:aqua; font-family: 'Courier New', Courier, monospace;">Hello World!</h1>
-    <p>2343232432432432324234324234</p>
-    <textarea placeholder="Feedback?"></textarea>
-    <br>
-    <button>Click here</button>
-    <br>
+  <button id="incrementBtn">0</button>
+  <script src="app.js"></script>
 </body>
 </html>
