--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <button id="incrementBtn">0</button>
+  <button id="incrementBtn">Click Me!! :6</button>
   <script src="app.js"></script>
 </body>
 </html>
