--- a/index.html
+++ b/index.html
@@ -2,11 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Increment Counter</title>
+  <title>Week 4: Chat & Counter</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <button id="incrementBtn">Click Me!! :6</button>
+  <section>
+    <h1>Counter</h1>
+    <button id="incrementBtn">0</button>
+  </section>
+  <section>
+    <h1>Chat Component</h1>
+    <textarea id="chatPrompt" placeholder="Type your prompt here"></textarea>
+    <br>
+    <button id="chatSendBtn">Send Prompt</button>
+    <div id="chatResponse"></div>
+  </section>
   <script src="app.js"></script>
 </body>
 </html>
+
