--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <section>
     <h1>Counter</h1>
-    <button id="incrementBtn">0</button>
+    <button id="incrementBtn">Click Me! 1</button>
   </section>
   <section>
     <h1>Chat Component</h1>
